--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@ Body {
   background: rgb(43, 42, 42);
   color: white;
 }
+
+button {
+  margin: 0px 6px;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px 0px 4px 10px;
+}
